<resources>
    <string name="app_name">Homeis</string>

    <string name="register_msg">Registrate ahora y conecta con tu vecindario</string>
    <string name="register">¿No tienes cuenta?</string>
    <string name="register2">Registrate Ahora</string>

    <string name="logon_msg">Inicia sesión ahora para conectar con tu vecindario</string>
    <string name="login">Iniciar Sesión</string>

    <string name="pass">Contraseña</string>
    <string name="pass_conf">Confirmar Contraseña</string>
    <string name="terms">Aceptar términos de privacidad y recibir emails con novedades</string>
    <string name="reg">Registrarse</string>
    <string name="mail">E-Mail</string>

    <string name="direccion1">Introduzca su Dirección...</string>
    <string name="direc">Registrar Direción</string>
    <string name="address1">Direccion 1</string>
    <string name="address2">Direccion 2</string>
    <string name="cp">Codigo Postal</string>
    <string name="city">Ciudad</string>
    <string name="country">Pais</string>

    <string name="bienv">Hola,</string>
    <string name="nombreEj">Sophie</string>
    <string name="quenec">¿Qué necesitas?</string>

    <string name="herr">Herramientas</string>
    <string name="soc">Social</string>
    <string name="preg">Preguntas</string>
    <string name="serv">Servicios</string>

    <string name="txnec">Necesita</string>
    <string name="txop">Ofrece</string>
    <string name="txdesc">Descripcion</string>
    <string name="txfecha">Fecha</string>
    <string name="titutlo_notificationes">Notificaciones</string>
    <string name="numero_service_requests">0</string>

    <string name="pl_username">Nombre de Usuario</string>

    <string name="titulo_service_request">Peticion de Servicios</string>
    <string name="titulo_approveignore_requests">Aprobar peticiones</string>
    <string name="screen_title_requests">Peticiones</string>
    <string name="Service_requests_title">Servicios</string>
    <string name="Tool_requests_title">Herramientas</string>
    <string name="requesting_card_txt">Solicitando</string>
    <string name="comment_card_txt">Comentar</string>
    <string name="decline_btn">Rechazar</string>
    <string name="Accept_btn">Aceptar</string>
    <string name="chatroom_screen_title">Chatroom</string>
    <string name="searchbar_hint">Busca aqui</string>
    <string name="busca">Busca aqui</string>
    <string name="responder">Responder</string>
    <string name="solicitar">Solicitar</string>

    <string name="descrip_aboutus">El equipo de Homeis es un grupo de jóvenes desarrolladores que
        crean este espacio para ayudarte a hacer de tu comunidad una unión. Conócenos en nuestros
        distintos medios de comunicación.</string>
    <string name="aboutus_gitF">fabioladecena</string>
    <string name="aboutus_gitFr">Fran2712</string>
    <string name="aboutus_P">Skarlekos</string>
    <string name="aboutus_I">Ionutalin23</string>
    <string name="aboutus_ps">Puntúanos en la Play Store</string>
    <string name="aboutus_cr">©Copyright 2021 by Homeis</string>
    <string name="nombreUsuario">Nombre Usuario</string>
    <string name="ubicacionPerfil">Ubicación</string>

    <string name="escriamen">Escriba un mensaje...</string>
    <string name="msg_tu">Tu:</string>
    <string name="screen_title_create">Crea una publicación</string>
    <string name="select_type">Selecciona el tipo de publicación</string>
    <string name="btn_create_post">Crear</string>
    <string name="que_ofrece">¿Qué ofreces?</string>
    <string name="desc_post">Escribe una descripción</string>

    <string name="post_tipo">Tipo de publicación</string>
    <string name="crear_post">Crear Publicación</string>

    <string name="title_settings">Ajustes</string>
    <string name="settings_name">Nombre</string>
    <string name="settings_password">Contraseña</string>
    <string name="settings_location">Dirección</string>
    <string name="settings_aboutUs">Sobre Nosotros</string>
    <string name="settings_logOut">Cerrar Sesión</string>
    <string name="title_settings_name">Nombre</string>
    <string name="settings_confirm_password">Confirmar Contraseña</string>
    <string name="settings_save">Guardar</string>
    <string name="settings_first_name">Nombre</string>
    <string name="settings_last_name">Apellido</string>
    <string name="title_settings_password">Cambiar Contraseña</string>
    <string name="title_settings_location">Direccion</string>

    <string name="recent_posts_title">Publicaciones Recientes</string>
    <string name="profile_map_title">Mapa</string>
    <string name="title_activity_maps">Map</string>

    <string name="pregunta_post">Escriba la pregunta</string>
    <string name="social_post">Escriba el titulo</string>

</resources>