<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent5"
    tools:context=".SettingsScreenDireccion">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintVertical_bias="0.0">

    </FrameLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/screen_title" />

    <TextView
        android:id="@+id/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_settings_location"
        android:textColor="@color/colorAccent4"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/save_layout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:background="@color/colorAccent8"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_layout">

        <TextView
            android:id="@+id/save_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/settings_save"
            android:textColor="@color/Confirm_blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:rotationX="0"
        android:rotationY="180"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_right_arrow"
        app:tint="@color/colorAccent4"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        style="@style/LoginTextInputLayoutStyle"
        android:textColorHint="@color/colorAccent7"
        app:layout_constraintTop_toBottomOf="@+id/divider3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_txti"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/address1"
            android:inputType="textPassword"
            android:password="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        style="@style/LoginTextInputLayoutStyle"
        android:textColorHint="@color/colorAccent7"
        app:layout_constraintTop_toBottomOf="@+id/first_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_txti"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/address2"
            android:inputType="textPassword"
            android:password="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postal_code_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        style="@style/LoginTextInputLayoutStyle"
        android:textColorHint="@color/colorAccent7"
        app:layout_constraintTop_toBottomOf="@+id/last_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postal_code_txti"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/cp"
            android:inputType="textPassword"
            android:password="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/city_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@color/cardview_light_background"
        app:layout_constraintTop_toBottomOf="@+id/postal_code_layout">

        <Spinner
            android:id="@+id/SPN_paises"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:theme="@style/ThemeSpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>